fixed unwanted hohrizontal and vertical scrollbar

--- a/css/global.css
+++ b/css/global.css
@@ -82,7 +82,7 @@ input:focus-visible {
 body {
 	margin: 0;
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	box-sizing: border-box;
 	font-family: "Poppins", sans-serif;
 }
@@ -92,7 +92,7 @@ body {
 	padding: 0;
 	background-color: var(--identity-primary);
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -245,7 +245,7 @@ body {
 	background-color: var(--grayscale-white);
 	box-shadow: var(--drop-shadow-inner);
 	border-radius: 0.75rem;
-	min-height: calc(85.5% - 1rem);
+	min-height: calc(85.5% - 2rem);
 	width: calc(100% - 1rem);
 	max-height: 100px;
 	overflow-y: auto;
